--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ a:hover {
 }
 
 .profile-picture:hover {
-  content: url("https://cdn-icons.flaticon.com/png/512/1610/premium/1610747.png?token=exp=1635163525~hmac=b01d4fe22530a72cb3c2faac46fcf42d");
+  content: url("https://media2.giphy.com/media/xUA7aOmNu7mCT9B77G/giphy.gif?cid=ecf05e47tmut4pwvgkibrt6p5jlov8ostgn7aenj7rmk4j2e&rid=giphy.gif&ct=s");
 }
 
 .computer {
