--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   text-align: center;
-  font-family: 'Bebas', sans-serif, fantasy;
+  font-family: 'Bebas', fantasy;
   /* background-color: #B5EAEA; */
 }
 
